# AutoRAG

./: .env.public  .gitignore  docker-compose.yaml
ai/: Dockerfile  pyproject.toml
ai/ai/: backend.py  main.py
ai/ai/models/: chunk.py  clean.py  embed.py  llm.py  scrap.py
ai/ai/routes/: chunk.py  clean.py  embed.py  llm.py  scrap.py
ai/ai/src/: chunk.py  chunking.py  clean.py  cleaner.py  embed.py  embedding.py  llm.py  scrap.py  scrapper.py
backend/: Dockerfile  pyproject.toml
backend/backend/: backend.py  main.py
backend/backend/models/: chatbot.py
backend/backend/routes/: chatbot.py  user.py
notebook/: pyproject.toml  rag.ipynb
ui/: Dockerfile  pyproject.toml
ui/.streamlit/: config.toml
ui/ui/: 1_💬_Chat.py
ui/ui/elements/: chat.py  user_chatbot_select.py
ui/ui/pages/: 2_📂_Documents.py  3_🤖_Users.py
ui/ui/utils/: misc.py
