[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Guy Chahine <guychahine@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ai" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
transformers = "^4.46.3"
torch = "^2.5.1"
requests = "^2.32.3"
bs4 = "^0.0.2"
langchain = "^0.3.7"
pydantic = "^2.10.1"
openai = "^1.57.0"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
