[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Guy Chahine <guychahine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
chromadb-client = "^0.5.20"
pymongo = "^4.10.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
