[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["Guy Chahine <guychahine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
chromadb-client = "^0.5.20"
bs4 = "^0.0.2"
langchain = "^0.3.7"
sentence-transformers = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
