[tool.poetry]
name = "ui"
version = "0.1.0"
description = ""
authors = ["Guy Chahine <guychahine@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ui" }
]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
